# cookiecutter-python-gui-application

./: .pyup.yml  README.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: pyproject.toml  requirements_dev.txt  setup.py
{{cookiecutter.project_slug}}/demo/PyQt5/: README.md  README.rst  requirements.txt
{{cookiecutter.project_slug}}/demo/kivy/: README.txt
{{cookiecutter.project_slug}}/demo/pysimplegui_/: README.md  layout_parser.py  requirements.txt  tree_node.py
{{cookiecutter.project_slug}}/demo/tk/: README.md
{{cookiecutter.project_slug}}/demo/tkinter_/: main.py
{{cookiecutter.project_slug}}/demo/toga_/togablogpost/: CHANGELOG  LICENSE  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/demo/toga_/togablogpost/src/togablogpost/: __main__.py  app.py  english_words.txt
{{cookiecutter.project_slug}}/demo/wxPython_/: README.md  main.py  requirements.txt
{{cookiecutter.project_slug}}/demo/{{cookiecutter.gui_framework}}/: README.md  requirements.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
