{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "Top-level package for {{ cookiecutter.project_name }}."
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.rst"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Win32 (MS Windows)',
    'Environment :: MacOS X',
    'Environment :: X11 Applications',
    'Environment :: Web Environment',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development',
    'Topic :: Communications :: Email',
    'Topic :: Office/Business',
]
packages = [
    { include = "{{ cookiecutter.project_slug }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "*"{% endif %}
{%- if cookiecutter.gui_framework == 'PyQt5' %}
PyQt5 = "*"
{% elif cookiecutter.gui_framework == 'PyQt6' %}
PyQt6 = "*"
{% elif cookiecutter.gui_framework == 'PySide2' %}
PySide2 = "*"
{% elif cookiecutter.gui_framework == 'PySide6' %}
PySide6 = "*"
{% elif cookiecutter.gui_framework == 'Kivy' %}
Kivy = "*"
{% elif cookiecutter.gui_framework == 'wxPython' %}
wxPython = "*"
{% elif cookiecutter.gui_framework == 'Pyforms' %}
Pyforms = "*"
{% elif cookiecutter.gui_framework == 'PySimpleGUI' %}
PySimpleGUI = "*"
{% elif cookiecutter.gui_framework == 'PyGTK' %}
PyGTK = "*"{%- endif %}
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"